--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,7 @@
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
       "version": "18"
-    },
-    "ghcr.io/devcontainers/features/postgresql:1": {
-      "version": "15"
-    },
-    "ghcr.io/devcontainers/features/redis:1": {}
+    }
   },
   "customizations": {
     "vscode": {
@@ -28,7 +24,7 @@
       }
     }
   },
-  "postCreateCommand": "echo 'Welcome to CityPulse Development Environment!'",
+  "postCreateCommand": "pip install --upgrade pip",
   "forwardPorts": [3000, 8000, 5432, 6379],
   "remoteUser": "vscode"
 }
